CTE data updated, #1
